[workspace]

members = ["error", "log", "server-oso", "safety", "server", "core", "web-test"]

[workspace.dependencies]
error = { path = "error" }
log = { path = "log" }
server-oso = { path = "server-oso" }
safety = { path = "safety" }
server = { path = "server" }
core = { path = "core" }
web-test = { path = "web-test" }


serde = { version = "1", features = ["derive"] }
axum = { version = "0.6.16", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1" }
thiserror = { version = "1" }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures-util = "0.3.28"
ulid = { version = "0.4", features = ["uuid"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

uuid = { version = "0.8", features = ["v4", "serde"] }
rand = "0.7.3"
headers = "0.3"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
http = "0.2.1"
oso = "0.20.0"
