[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { version = "0.4.3" }
core = { workspace = true }
log = { workspace = true }
tower-http = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
server-oso = { workspace = true }
oso = { workspace = true }
hyper = "0.14"
